# sakila_lab_henrik_goransson

./: .gitignore  README.md  pyproject.toml
notebooks/: sakila_analysis.ipynb
scripts/: load_data.py
sql/01_basic_queries/: movies_long.sql  movies_love.sql  stats_length.sql
sql/02_advanced_queries/: top_actors.sql  top_rentals.sql
sql/03_visualizations/: revenue_by_category.sql  top_customers.sql
