[project]
name = "sakila-lab-henrik-goransson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "requests>=2.32.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
